--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-	<title>What Color Is It?</title>
-	<meta name="description" content="What Color Is It? See the current time as a color described by a hex triplet!"/>
+	<title>Screensaver</title>
+	<meta name="description" content="See the current time as a color described by a hex triplet!"/>
 	<meta name="mobile-web-app-capable" content="yes">
 	<link rel="stylesheet" type="text/css" href="./assets/style.css"/>
 	<link rel="icon" sizes="128x128" href="./assets/favicon.png">
